output-api: refactor API
- Make Output more simply, so it allows reuse and sharing
- Added BufferedOutput for buffers